Fix mobile image stretch issue

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -49,12 +49,12 @@
 
 .desktop-logo img {
   width: 50px;
-  height: fit-content;
+  height: auto;
 }
 
 .mobile-logo {
   width: 50px;
-  height: fit-content;
+  height: auto;
 }
 
 .discord-link {
