--- a/src/pages/Collection/Collection.css
+++ b/src/pages/Collection/Collection.css
@@ -87,7 +87,7 @@
 
 .collection-card-img {
   width: 80%;
-  height: fit-content;
+  height: auto;
   z-index: 999;
 }
 
