--- a/src/pages/Merchandise/Merchandise.css
+++ b/src/pages/Merchandise/Merchandise.css
@@ -68,7 +68,7 @@
 }
 
 .merchandise-shirts {
-  height: fit-content;
+  height: auto;
   width: 100%;
 }
 
